# votecountingapp

./: CMakeLists.txt  Driver.cpp  Driver.h  README.md  main.cpp
CommandProcessor/: CMakeLists.txt  Command.h  CommandCatalog.cpp  CommandCatalog.h  CommandProcessor.cpp  CommandProcessor.h  Exceptions.h  HelpCommand.cpp  ListCandidatesCommand.cpp  LoadCandidatesCommand.cpp  SubmitBallotCommand.cpp  TallyCommand.cpp  ViewResultsCommand.cpp  commands.txt
CommandProcessor/tests/: CMakeLists.txt  CommandCatalog_gt.cpp  CommandProcessor_gt.cpp  ListCandidates_gt.cpp  LoadCandidates_gt.cpp  SubmitBallot_gt.cpp
Design/: Design.md  UC.txt  class_diagram.txt  list_activity.txt  load_activity.txt  results_activity.txt  submit_ballot_activity.txt  tally_activity.txt
Parser/: CMakeLists.txt  CandidatesFileParser.cpp  CandidatesFileParser.h  CommandsFileParser.cpp  CommandsFileParser.h  FileParser.cpp  FileParser.h  ParserCollection.h
Parser/tests/: CMakeLists.txt  CandidatesParser_gt.cpp  CommandsParser_gt.cpp  ParserCollection_gt.cpp  candidates.txt  commands.txt
VoteCounter/: Ballot.cpp  Ballot.h  CMakeLists.txt  Candidate.cpp  Candidate.h  Exceptions.h  Types.h  VoteCounter.cpp  VoteCounter.h
VoteCounter/tests/: Ballot_gt.cpp  CMakeLists.txt  Candidate_gt.cpp  VoteCounter_gt.cpp
